# Turing-machine

./: .gitignore  CMakeLists.txt
programs/: case1.tm  case2.tm
turing-project/: ConfigCtx.cpp  ConfigCtx.h  MoveRule.cpp  MoveRule.h  TMTape.cpp  TMTape.h  TmCtx.cpp  TmCtx.h  executor.cpp  executor.h  main.cpp  parser.cpp  parser.h
